corrected-submit-button-alignment

--- a/styles.css
+++ b/styles.css
@@ -633,6 +633,7 @@
     letter-spacing: 0%;
     text-align: center;
     margin-top: 32px;
+    margin-bottom:80px;
 }
 
 .done-now :hover {
